--- a/static/style.scss
+++ b/static/style.scss
@@ -105,6 +105,10 @@ header {
 					flex: .4;
 				}
 
+				&#font-properties {
+					flex: 2;
+				}
+
 				h1 {
 					margin: 0 0 1rem;
 					padding: 0;
