Added add/remove staves

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -122,6 +122,10 @@ html(lang="en")
 						button#add-bar-before + Bar Before
 						button#add-bar-after + Bar After
 						button#delete-bar Delete Barline
+					section#stave
+						h1.title Stave
+						button#add-stave + Add Stave
+						button#remove-stave - Remove Last Stave
 					section.mode-section
 						h1.title Mode
 						select#mode-layout
