--- a/templates/index.pug
+++ b/templates/index.pug
@@ -33,11 +33,14 @@ html(lang="en")
 			nav
 				ul#menu-titles
 					li#title PipeScore
+						div#pipescore-dropdown
+							ul
+								li Download
+								li Export as PDF
 					li#note-title.menu-title.viewing Note
 					li#gracenote-title.menu-title Gracenote
 					li#text-title.menu-title Text
 					li#layout-title.menu-title Layout
-					li#file-title.menu-title File
 				div#note.menu.viewing
 					section#note-type
 						h1.title Note type
@@ -130,7 +133,5 @@ html(lang="en")
 						h1.title Mode
 						select#mode-layout
 							option(value="select") Select
-				div#file.menu
-					h1.title File menu
 		div#page
 		style#programmable-styles
