--- a/static/style.scss
+++ b/static/style.scss
@@ -71,6 +71,8 @@ header {
 						margin: 0;
 						position: absolute;
 						background: theme('secondary');
+						left: 0;
+						text-align: left;
 
 						ul {
 							margin: 0;
