--- a/templates/index.pug
+++ b/templates/index.pug
@@ -15,6 +15,7 @@ html(lang="en")
 		script(src="/gracenote.js")
 		script(src="/barline.js")
 		script(src="/text.js")
+		script(src="/time_sig.js")
 		script(src="/score.js")
 		script(src="/script.js")
 		script(defer,src="/ui.js")
