--- a/public/static/index.scss
+++ b/public/static/index.scss
@@ -10,7 +10,7 @@ $color-theme: (
 	@return map-get($map: $color-theme, $key: $color-name)
 }
 
-html,body {
+body {
     height: 100%;
     background: theme(primary);
 }
@@ -18,15 +18,15 @@ html,body {
 main {
     background: white;
     width: 60%;
-    height: 60%;
     margin: auto;
-    margin-top: 15%;
+    margin-top: 20vh;
     display: flex;
     font-family: 'Roboto';
 
     div {
         flex: 1;
         text-align: center;
+        margin-bottom: 15vh;
 
         h1 {
             color: theme(primary);
@@ -77,6 +77,7 @@ main {
 @media only screen and (max-width: 784px) {
     main {
         flex-direction: column;
+        margin-top: 1rem;
         #left {
             h1 {
                 margin-top: 3rem;
@@ -95,6 +96,5 @@ main {
 @media only screen and (max-width: 394px) {
     main {
         width: 98%;
-        height: 80%;
     }
 }
