--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -12,8 +12,58 @@ $color-theme: (
 
 html,body {
     background: theme(primary);
-    padding-top: 5rem;
     font-family: 'Roboto';
+    main {
+        background: white;
+        width: 90vw;
+        margin: auto;
+        height: 80vh;
+        margin-top: 10vh;
+        padding: 2rem;
+        overflow: auto;
+        h2 {
+            cursor: pointer;
+            user-select: none;
+            padding: 2rem;
+            background: theme(primary);
+            color: white;
+        }
+        section {
+            display: none;
+            #password-match {
+                display: none;
+                background: indianred;
+                color: white;
+                padding: .2rem;
+                margin: .5rem;
+                margin-left: 10vw;
+            }
+
+            h3 {
+                text-align: center;
+            }
+
+            form {
+                * {
+                    display: block;
+                    font-size: 1.2rem;
+                    font-family: inherit;
+                    margin: .2rem;
+                    margin-left: 10vw;
+                }
+                input[type="submit"] {
+                    background: theme(primary);
+                    padding: .3rem .5rem;
+                    font-size: 1.5rem;
+                    border: none;
+                    border-radius: .2rem;
+                    color: white;
+                    margin-top: 1rem;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
     a {
         position: fixed;
         top: 1rem;
