--- a/public/css/scores.scss
+++ b/public/css/scores.scss
@@ -36,3 +36,48 @@ html,body {
         margin: .2rem;
     }
 }
+
+
+#loading {
+    width: 3rem;
+    height: 3rem;
+    background: lighten(theme(primary),20%);
+    border-radius: 50%;
+    position: fixed;
+    top: calc(50% - 1.5rem);
+    left: calc(50% - 1.5rem);
+
+    #inner {
+        width: 2rem;
+        height: 2rem;
+        background: white;
+        border-radius: 50%;
+        margin: .5rem;   
+    }
+    #rotate {
+        background: white;
+        width: 1.5rem;
+        height: 3rem;
+        margin: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-bottom-right-radius: 100% 50%;
+        border-top-right-radius: 100% 50%;
+        transform-origin: 0% 50%;
+        transform: rotate(90deg);
+        animation: rotate 2s infinite;
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
