--- a/public/css/scores.scss
+++ b/public/css/scores.scss
@@ -47,6 +47,19 @@ html,body {
         h1 {
             font-size: 3rem;
         }
+        a button {
+            cursor: pointer;
+            color: white;
+            font-family: inherit;
+            font-size: 1rem;
+            border-radius: .5rem;
+            padding: .5rem 1rem;
+            border: 2px solid theme(primary);
+            background: theme(primary);
+            float: right;
+            margin-top: -5rem;
+            margin-right: .2rem;
+        }
     }
 
     div.score {
