--- a/public/css/scores.scss
+++ b/public/css/scores.scss
@@ -47,6 +47,18 @@ html,body {
         h1 {
             font-size: 3rem;
         }
+        button {
+            cursor: pointer;
+            color: theme(primary);
+            font-family: inherit;
+            font-size: 1rem;
+            border-radius: .5rem;
+            padding: .5rem 1rem;
+            border: 2px solid theme(primary);
+            background: theme(secondary);
+            float: right;
+            margin-top: -4rem;
+        }
         a button {
             cursor: pointer;
             color: white;
@@ -57,7 +69,7 @@ html,body {
             border: 2px solid theme(primary);
             background: theme(primary);
             float: right;
-            margin-top: -5rem;
+            margin-top: -6rem;
             margin-right: .2rem;
         }
     }
