Fixed small bugs and added small features

--- a/public/css/pipescore.scss
+++ b/public/css/pipescore.scss
@@ -157,7 +157,7 @@ header {
 				font-size: .9rem;
 				vertical-align: top;
 				&#apply-to-selected-gracenotes {
-					flex: .4;
+					flex: 1;
 				}
 
 				&#font-properties {
