--- a/public/css/pipescore.css
+++ b/public/css/pipescore.css
@@ -75,13 +75,16 @@ header nav ul#menu-titles li {
 
 header nav ul#menu-titles li#title {
   font-weight: 700;
-  -webkit-box-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 12rem;
+          flex: 0 0 12rem;
+  padding: 0;
 }
 
 header nav ul#menu-titles li#title a {
+  display: block;
   color: #000;
+  margin: .5rem;
 }
 
 header nav ul#menu-titles li#title div#pipescore-dropdown {
@@ -96,11 +99,18 @@ header nav ul#menu-titles li#title:hover > div#pipescore-dropdown {
   background: #BDE4FF;
   left: 0;
   text-align: left;
+  width: 12rem;
+  -webkit-animation: slide .2s;
+          animation: slide .2s;
 }
 
 header nav ul#menu-titles li#title:hover > div#pipescore-dropdown ul {
   margin: 0;
   padding: 0;
+}
+
+header nav ul#menu-titles li#title:hover > div#pipescore-dropdown ul li {
+  cursor: pointer;
 }
 
 header nav ul#menu-titles li.menu-title {
@@ -438,6 +448,24 @@ header nav .menu section a {
   }
   100% {
     opacity: 0;
+  }
+}
+
+@-webkit-keyframes slide {
+  0% {
+    margin-top: -3rem;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+
+@keyframes slide {
+  0% {
+    margin-top: -3rem;
+  }
+  100% {
+    margin-top: 0;
   }
 }
 /*# sourceMappingURL=pipescore.css.map */
