--- a/public/css/pipescore.scss
+++ b/public/css/pipescore.scss
@@ -78,8 +78,14 @@ header {
 
 				&#title {
 					font-weight: 700;
-					flex: 2;
-					a { color: #000; }
+					flex: 0 0 12rem;
+					padding: 0;
+
+					a {
+						display: block;
+						color: #000;
+						margin: .5rem;
+					}
 
 					div#pipescore-dropdown {
 						display: none;
@@ -93,10 +99,16 @@ header {
 						background: theme('secondary');
 						left: 0;
 						text-align: left;
+						width: 12rem;
+						animation: slide .2s;
 
 						ul {
 							margin: 0;
 							padding: 0;
+
+							li {
+								cursor: pointer;
+							}
 						}
 					}
 				}
@@ -378,5 +390,14 @@ header {
 	}
 	100% {
 		opacity: 0;
+	}
+}
+
+@keyframes slide {
+	0% {
+		margin-top: -3rem;
+	}
+	100% {
+		margin-top: 0;
 	}
 }
