--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,13 +20,17 @@ main div {
       -ms-flex: 1;
           flex: 1;
   text-align: center;
-  margin-bottom: 15vh;
+  margin-bottom: 10vh;
+}
+
+main div img {
+  margin: 3rem 3rem 0 3rem;
 }
 
 main div h1 {
   color: #26A5FF;
   font-size: 3rem;
-  margin-top: 60%;
+  margin-top: 4rem;
 }
 
 main div p {
@@ -52,7 +56,7 @@ main div#right a button {
 
 main div#right a#login button {
   background: #26A5FF;
-  margin-top: 60%;
+  margin-top: 4rem;
   margin-bottom: .2rem;
 }
 
@@ -81,7 +85,7 @@ main div#right a#goto button {
   }
 }
 
-@media only screen and (max-width: 394px) {
+@media only screen and (max-width: 574px) {
   main {
     width: 98%;
   }
