--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -26,12 +26,16 @@ main {
     div {
         flex: 1;
         text-align: center;
-        margin-bottom: 15vh;
+        margin-bottom: 10vh;
+
+        img {
+            margin: 3rem 3rem 0 3rem;
+        }
 
         h1 {
             color: theme(primary);
             font-size: 3rem;
-            margin-top: 60%;
+            margin-top: 4rem;
         }
 
         p {
@@ -58,7 +62,7 @@ main {
             a#login {
                 button {
                     background: theme(primary);
-                    margin-top: 60%;
+                    margin-top: 4rem;
                     margin-bottom: .2rem;
                 }
             }
@@ -93,7 +97,7 @@ main {
     }
 }
 
-@media only screen and (max-width: 394px) {
+@media only screen and (max-width: 574px) {
     main {
         width: 98%;
     }
