Changed how undo works, added redo

--- a/public/css/pipescore.scss
+++ b/public/css/pipescore.scss
@@ -124,7 +124,7 @@ header {
 				&#score-name {
 					flex: 5;
 				}
-				&#save, &#undo {
+				&#save, &#undo, &#redo {
 					flex: 1;
 					button {
 						cursor: pointer;
